--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,22 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/loading.css">
   </head>
   <body>
     <noscript>
       <strong>We're sorry but System Admin Trees4Trees doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app">
+      <div class="loading-wrapper">
+        <div>
+          <div class="loadingio-spinner-disk-jhi7hq19glb"><div class="ldio-qmo9uoobg8c">
+          <div><div></div><div></div></div>
+          </div></div>
+          <p>Loading...</p>
+        </div>
+      </div>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
