update logos and FF form modal

--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,14 @@
     <div id="app">
       <div class="loading-wrapper">
         <div>
-          <div class="loadingio-spinner-disk-jhi7hq19glb"><div class="ldio-qmo9uoobg8c">
+          <div class="geko-loading-wrapper">
+            <img src="images/GEKO_without_world.png" alt="">
+            <img src="images/GEKO_world.png" alt="">
+          </div>
+          <!-- <div class="loadingio-spinner-disk-jhi7hq19glb"><div class="ldio-qmo9uoobg8c">
           <div><div></div><div></div></div>
-          </div></div>
-          <p>Loading...</p>
+          </div></div> -->
+          <!-- <p>Loading...</p> -->
         </div>
       </div>
     </div>
