update scooping form, create + get all

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
     <script src="https://api.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.2.0/leaflet-omnivore.min.js"></script>
     <!-- XLSX -->
     <script src="https://cdn.sheetjs.com/xlsx-0.19.3/package/dist/xlsx.full.min.js"></script>
+    <!-- SPLINE.design -->
+    <script type="module" src="https://unpkg.com/@splinetool/viewer@0.9.336/build/spline-viewer.js"></script>
   </head>
   <body>
     <noscript>
