update scoping visit

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
     <script src="https://cdn.sheetjs.com/xlsx-0.19.3/package/dist/xlsx.full.min.js"></script>
     <!-- SPLINE.design -->
     <script type="module" src="https://unpkg.com/@splinetool/viewer@0.9.336/build/spline-viewer.js"></script>
+    <!-- TURF -->
+    <script src='https://unpkg.com/@turf/turf@6/turf.min.js'></script>
   </head>
   <body>
     <noscript>
