add download pdf in detail farmerlahan dashboard

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,10 @@
     <script type="module" src="https://unpkg.com/@splinetool/viewer@0.9.336/build/spline-viewer.js"></script>
     <!-- TURF -->
     <script src='https://unpkg.com/@turf/turf@6/turf.min.js'></script>
+    <!-- JSPDF -->
+    <script src="https://unpkg.com/jspdf@latest/dist/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.30/jspdf.plugin.autotable.min.js"></script>
+
   </head>
   <body>
     <noscript>
